조회 페이지 완료

--- a/src/fc_history.html
+++ b/src/fc_history.html
@@ -6,7 +6,250 @@
     <div class="page_wrap">
         @@include('./include/header2.html')
 		<section class="middle_section">
-			내용이 들어갑니다.
+            <div class="sc_zone">
+                <div class="board_sort_wrap">
+                    <ul class="board_sort_field">
+                        <li>
+                            <select class="form_select"><option>고객 등급 선택</option></select>
+                        </li>
+                        <li>
+                            <select class="form_select"><option>전체/신청/미신청</option></select>
+                        </li>
+                        <li>
+                            <select class="form_select"><option>고객명/연락처</option></select>
+                        </li>
+                        <li class="long">
+                            <div class="board_sort_item">
+                                <div class="board_sort_liquid_wrap"><input type="text" class="formt_input"></div>
+                                <div class="board_sort_short_wrap">
+                                    <a href="#" class="btn_sort_box">검색</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="board_fraction_wrap">
+                    <ul class="board_fraction_list">
+                        <li>대상고객: 8명</li>
+                        <li>신청고객: 1명</li>
+                    </ul>
+                </div>
+                <div class="board_list_table_wrap">
+                    <table class="board_list_table">
+                        <thead>
+                            <tr>
+                                <th><span class="board_thtext">신청일자</span></th>
+                                <th><span class="board_thtext">고객명</span></th>
+                                <th><span class="board_thtext">연락처</span></th>
+                                <th><span class="board_thtext">등급</span></th>
+                                <th><span class="board_thtext">상품</span></th>
+                                <th><span class="board_thtext">신청자</span></th>
+                                <th><span class="board_thtext">배송정보</span></th>
+                                <th><span class="board_thtext">배송현황</span></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <!-- mobile -->
+                                <td class="td_dd_value_mb"><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></td>
+                                <!-- // mobile -->
+                                <td class="bg_type2">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">신청일자</span></dt>
+                                        <dd><span class="td_dd_value no_break">24.99.99</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">고객명</span></dt>
+                                        <dd><span class="td_dd_value no_break">사슴</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">연락처</span></dt>
+                                        <dd><span class="td_dd_value no_break">010-1234-5678</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">등급</span></dt>
+                                        <dd><span class="td_dd_value no_break">SS웰컴</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_hidden">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">상품</span></dt>
+                                        <dd><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_long">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">신청자</span></dt>
+                                        <dd><span class="td_dd_value no_break">강아지</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_btn">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">배송정보</span></dt>
+                                        <dd>
+                                            <span class="td_dd_value no_break">
+                                                <button class="btn_board_box" name="btn_detail_view">상세보기</button>
+                                            </span>
+                                        </dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_long">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">배송현황</span></dt>
+                                        <dd>
+                                            <span class="td_dd_value no_break">
+                                                배송중 / 우체국<br>0123456789
+                                            </span>
+                                        </dd>
+                                    </dl>
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- mobile -->
+                                <td class="td_dd_value_mb"><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></td>
+                                <!-- // mobile -->
+                                <td class="bg_type2">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">신청일자</span></dt>
+                                        <dd><span class="td_dd_value no_break">24.99.99</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">고객명</span></dt>
+                                        <dd><span class="td_dd_value no_break">사슴</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">연락처</span></dt>
+                                        <dd><span class="td_dd_value no_break">010-1234-5678</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">등급</span></dt>
+                                        <dd><span class="td_dd_value no_break">SS웰컴</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_hidden">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">상품</span></dt>
+                                        <dd><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_long">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">신청자</span></dt>
+                                        <dd><span class="td_dd_value no_break">코끼리</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_btn">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">배송정보</span></dt>
+                                        <dd>
+                                            <span class="td_dd_value no_break">
+                                                <button class="btn_board_box" name="btn_detail_view">상세보기</button>
+                                            </span>
+                                        </dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_long">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">배송현황</span></dt>
+                                        <dd>
+                                            <span class="td_dd_value no_break">
+                                                신청접수중
+                                            </span>
+                                        </dd>
+                                    </dl>
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- mobile -->
+                                <td class="td_dd_value_mb"><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></td>
+                                <!-- // mobile -->
+                                <td class="bg_type2">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">신청일자</span></dt>
+                                        <dd><span class="td_dd_value no_break">24.99.99</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">고객명</span></dt>
+                                        <dd><span class="td_dd_value no_break">사슴</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">연락처</span></dt>
+                                        <dd><span class="td_dd_value no_break">010-1234-5678</span></dd>
+                                    </dl>
+                                </td>
+                                <td>
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">등급</span></dt>
+                                        <dd><span class="td_dd_value no_break">SS웰컴</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_hidden">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">상품</span></dt>
+                                        <dd><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_long">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">신청자</span></dt>
+                                        <dd><span class="td_dd_value no_break">코알라</span></dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_btn">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">배송정보</span></dt>
+                                        <dd>
+                                            <span class="td_dd_value no_break">
+                                                <button class="btn_board_box" name="btn_detail_view">상세보기</button>
+                                            </span>
+                                        </dd>
+                                    </dl>
+                                </td>
+                                <td class="respon_long">
+                                    <dl class="td_dl_item">
+                                        <dt><span class="td_dt_key">배송현황</span></dt>
+                                        <dd>
+                                            <span class="td_dd_value no_break">
+                                                배송완료
+                                            </span>
+                                        </dd>
+                                    </dl>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <ul class="indent_para_list type2">
+                    <li>
+                        <p class="indent_para">
+                            <span class="indent_bullet">※</span>
+                            <span class="indent_liquid">SOL ON 서비스는 신청 후 10일 이내 발송됩니다. (상품마다 상이)</span>
+                        </p>
+                    </li>
+                    <li>
+                        <p class="indent_para">
+                            <span class="indent_bullet">※</span>
+                            <span class="indent_liquid">SOL ON 서비스는 신청한 다음날까지 취소가 가능합니다. (익일 자정까지)</span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
 		</section>
 		@@include('./include/footer.html')
 	</div>
@@ -124,6 +367,15 @@
                 deliveryPopup.popupShow(); // show
             }
 
+            const btn_detail_view = document.querySelectorAll("[name='btn_detail_view']");
+            if(!!btn_detail_view){
+                btn_detail_view.forEach((item)=>{
+                    item.addEventListener("click", (e) => {
+                        e.preventDefault();
+                        deliveryPopup.popupShow(); 
+                    });
+                });
+            }
             /* document.querySelector("#btn_idpw_call").addEventListener("click", (e) => {
                 e.preventDefault();
                 mainPopup.popupShow(); 
