상세 작업중

--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -160,7 +160,7 @@
 						<td class="no"></td>
 						<td class="link"><a href="product_detail.html?popup" target="_blank">상세페이지 - 신청하기 팝업</a></td>
 						<td class="td_url"></td>
-						<td class="work ing"></td>
+						<td class="work end"></td>
 						<td class="bgo"></td>
 					</tr>
 					<tr>
