--- a/src/fc_history.html
+++ b/src/fc_history.html
@@ -80,7 +80,7 @@
                                 <td class="respon_hidden">
                                     <dl class="td_dl_item">
                                         <dt><span class="td_dt_key">상품</span></dt>
-                                        <dd><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
+                                        <dd><span class="td_dd_value emp">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
                                     </dl>
                                 </td>
                                 <td class="respon_long">
@@ -141,7 +141,7 @@
                                 <td class="respon_hidden">
                                     <dl class="td_dl_item">
                                         <dt><span class="td_dt_key">상품</span></dt>
-                                        <dd><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
+                                        <dd><span class="td_dd_value emp">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
                                     </dl>
                                 </td>
                                 <td class="respon_long">
@@ -202,7 +202,7 @@
                                 <td class="respon_hidden">
                                     <dl class="td_dl_item">
                                         <dt><span class="td_dt_key">상품</span></dt>
-                                        <dd><span class="td_dd_value">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
+                                        <dd><span class="td_dd_value emp">[명품한우] 명품 한우세트 ‘암소NO.09’ & 발뮤다 플레이트 프로</span></dd>
                                     </dl>
                                 </td>
                                 <td class="respon_long">
