--- a/src/fc_product_list.html
+++ b/src/fc_product_list.html
@@ -23,7 +23,7 @@
 						<div class="fiqure_item_wrap">
 							<ul class="fiqure_item_list">
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_01.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">바우처 기프트</span></div>
@@ -32,7 +32,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_02.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">프리미엄 기프트</span></div>
@@ -48,7 +48,7 @@
 						<div class="fiqure_item_wrap">
 							<ul class="fiqure_item_list">
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_01.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">바우처 기프트</span></div>
@@ -57,7 +57,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_02.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">프리미엄 기프트</span></div>
@@ -73,7 +73,7 @@
 						<div class="fiqure_item_wrap">
 							<ul class="fiqure_item_list">
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_01.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">바우처 기프트</span></div>
@@ -82,7 +82,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_02.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">프리미엄 기프트</span></div>
@@ -98,7 +98,7 @@
 						<div class="fiqure_item_wrap">
 							<ul class="fiqure_item_list">
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_01.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">바우처 기프트</span></div>
@@ -107,7 +107,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" class="fiqure_item">
+									<a href="product_detail.html" class="fiqure_item">
 										<div class="fiqure_thum"><img src="./assets/images/temp_product_02.jpg" alt=""></div>
 										<div class="fiqure_spec">
 											<div class="flag_row"><span class="flag">프리미엄 기프트</span></div>
