추가페이지 전달

--- a/src/codinglist.html
+++ b/src/codinglist.html
@@ -112,7 +112,7 @@
 						<td class="link"><a href="login.html" target="_blank">로그인</a></td>
 						<td class="td_url"></td>
 						<td class="work end"></td>
-						<td class="bgo"></td>
+						<td class="bgo">20241126 변경</td>
 					</tr>
 					<tr>
 						<td class="no"></td>
@@ -120,6 +120,34 @@
 						<td class="td_url"></td>
 						<td class="work end"></td>
 						<td class="bgo"></td>
+					</tr>
+					<tr>
+						<td class="no"></td>
+						<td class="link"><a href="certified.html" target="_blank">인증</a></td>
+						<td class="td_url"></td>
+						<td class="work end"></td>
+						<td class="bgo">20241126 추가</td>
+					</tr>
+					<tr>
+						<td class="no"></td>
+						<td class="link"><a href="certified.html?modal_01" target="_blank">인증 완료</a></td>
+						<td class="td_url"></td>
+						<td class="work end"></td>
+						<td class="bgo">20241126 추가</td>
+					</tr>
+					<tr>
+						<td class="no"></td>
+						<td class="link"><a href="certified.html?modal_02" target="_blank">인증 완료 2</a></td>
+						<td class="td_url"></td>
+						<td class="work end"></td>
+						<td class="bgo">20241126 추가</td>
+					</tr>
+					<tr>
+						<td class="no"></td>
+						<td class="link"><a href="certified.html?modal_error" target="_blank">인증 오류</a></td>
+						<td class="td_url"></td>
+						<td class="work end"></td>
+						<td class="bgo">20241126 추가</td>
 					</tr>
 					<tr>
 						<td class="no"></td>
