닫기 버튼 추가

--- a/src/certified.html
+++ b/src/certified.html
@@ -7,7 +7,7 @@
         <div class="bg_single_global" style="background-image:url(./assets/images/bg_login.jpg)"></div>
         <div class="single_container">
             <div class="single_inner">
-                <div class="single_box type2">
+                <div class="single_box type2 has_close">
                     <div class="single_sub_title_row">
                         <h1 class="single_sub_title">SOL ON 인증 요청</h1>
                         <p class="single_sub_title_copy">시스템에 입력되어 있는 휴대폰 번호로 <br>인증번호가 발송됩니다.</p>
@@ -28,6 +28,7 @@
                             <img src="./assets/images/login_logo.png" alt="신한라이프">
                         </div>
                     </div>
+                    <a href="javascript:;" class="btn_box_close"><span class="hdtext">닫기</span></a>
                 </div>
             </div>
         </div>
